<resources>
    <string name="app_name">Movies Suggestions</string>
    <string name="imageDescription">image</string>
    <string name="title">Title</string>
    <string name="year">Year:</string>
    <string name="rating">Rating:</string>
    <string name="genre">Genres:</string>
    <string name="downloads">Downloads:</string>
    <string name="imdb">IMDB:</string>
    <string name="language">Language:</string>
    <string name="description">Description:</string>
    <string name="download_torrent">Download Torrent</string>
    <string name="suggested_movies">Suggested Movies</string>
    <string name="screenshots">Screenshots:</string>
    <string name="search">search</string>
</resources>